# rustfm-scrobble

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: example.rs
src/: client.rs  models.rs  scrobbler.rs
