[package]
name = "rustfm-scrobble-proxy"
version = "1.1.2"
authors = ["David Futcher <david@futcher.io>"]
description = "Fork of rustfm-scrobble, a Last.fm Scrobble crate, adding proxy support"
repository = "https://github.com/InputUsername/rustfm-scrobble-proxy"
keywords = ["lastfm", "last-fm", "scrobble", "api"]
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "multimedia"]
edition = "2021"

[dependencies]
attohttpc = { version = "0.19", features = ["form"] }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wrapped-vec = "0.3"

[dev-dependencies]
mockito = "0.28"
