[package]
name = "rustfm-scrobble"
version = "1.1.1"
authors = ["David Futcher <david@futcher.io>"]
description = "Last.fm Scrobble crate for Rust"
repository = "https://github.com/bobbo/rustfm-scrobble"
keywords = ["lastfm", "last-fm", "scrobble", "api"]
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "multimedia"]
edition = "2021"

[dependencies]
ureq = "2.10.1"
md5 = "0.7.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
mockito = "0.32.5"
